--- a/css/main.css
+++ b/css/main.css
@@ -16,12 +16,14 @@ body {
   font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 19px;
+  font-size: 16px;
+  line-height: 22px;
+  color: #4a4b4c;
+  background: #fff;
 }
-img{
-    max-width: 100%;
-    height: auto;
+img {
+  max-width: 100%;
+  height: auto;
 }
 .container {
   width: 100%;
@@ -33,21 +35,107 @@ img{
   border: 2px solid red;
 }
 
-.site-header-top {
+/* SITE-HEADER */
+.site-header {
+}
+/* site header-container */
+.site-header-container {
   display: flex;
+  align-items: center;
   background: #f6f6f6;
+}
+.site-header-top {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .site-header-logo {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  background: #fff;
+  padding: 8px 6px;
   background: #ffffff;
   border-radius: 7px;
-  padding: 9px 6px;
+  margin-right: 35px;
+}
+.site-header-logo:hover {
+  opacity: 0.8;
+}
+.site-header-logo:active {
+  opacity: 0.6;
+}
+/* MONEY */
+
+.money-list {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-right:auto;
+}
+.money-item {
+}
+.money-item:not(:last-child) {
+  margin-right: 25px;
+}
+.money-item a {
+  text-decoration: none;
+}
+/* LANGUAGE */
+
+.header-lang {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  margin-right: 25px;
+  background: #dce6ff;
+  border-radius: 39px;
+  width: 70px;
+  height: 36px;
+  padding: 3px;
+}
+.lang-toggle {
+  text-decoration: none;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 12px;
+  text-align: center;
+  color: #a6a6a6;
+}
+.lang-toggle-active {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #ffffff;
+  text-decoration: none;
+  padding: 9px 7px;
+  color: #000;
+  margin-right: 8px;
 }
 
-
-.main-content {
-    flex-grow: 1;
-    jcsb
+.header-auth-link {
+  background: #7296ec;
+  border-radius: 10px;
+  text-decoration: none;
+  padding: 13px 20px;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
 }
+.header-auth-link:hover {
+  opacity: 0.8;
+}
+.header-auth-link:active {
+  opacity: 0.6;
+} 
