--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@
 * {
   box-sizing: border-box;
 }
+*:focus {
+  outline: 2px dashed #7296ec;
+  outline-offset: 3px;
+}
 html {
   height: 100%;
   scroll-behavior: smooth;
@@ -166,12 +170,15 @@ img {
   color: #d1d1d1;
   margin: 0;
   padding: 0;
+  /* padding-top: 20px; */
   margin-bottom: 20px;
 }
-.site-menu-item {
-  margin-right: 34px;
+.site-menu-item:not(:last-child) {
+  margin-right: 34.44px;
 }
+
 .site-menu-link {
+  display: inline-block;
   font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -180,12 +187,14 @@ img {
   text-align: center;
   color: #7f7f7f;
   text-decoration: none;
+  cursor: pointer;
 }
 .header-hr {
   width: 100%;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 
 .banner-img {
+  display: flex;
   border-radius: 8px;
 }
