--- a/css/main.css
+++ b/css/main.css
@@ -198,3 +198,104 @@ img {
   display: flex;
   border-radius: 8px;
 }
+
+/* MAIN-CONTENT */
+.main-content {
+  flex-grow: 1;
+  padding-top: 50px;
+}
+
+.news-grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+}
+.new-grid-item {
+  width: 393px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+.article-card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px 17px 15px;
+  background: #f6f6f6;
+  border-radius: 15px;
+  margin-bottom: 10px;
+}
+.article-card-title {
+  width: 358px;
+  height: 78px;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 10px;
+}
+.article-card-link {
+  display: inline-block;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 26px;
+  text-decoration: none;
+  color: #000000;
+}
+.article-card-link:hover {
+  color: #7296ec;
+
+}
+.article-card-link:active {
+  opacity: 0.6;  
+}
+.article-card-text {
+  width: 346px;
+  height: 44px;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #4a4b4c;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 15px;
+}
+.article-card-img {
+  display: flex;
+  border-radius: 10px;
+  width: 359px;
+  height: 165px;
+  margin-top: 15px; 
+  margin-bottom: 15px;
+  object-fit: cover;
+}
+.article-card-footer {
+  display: flex;
+}
+.article-card-source-icon {
+  border-radius: 5px;
+  display: flex;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.article-card-source-time {
+  font-size: 12px;
+  font-style: normal;
+
+}
+.article-card-source {
+  font-family: "Rubik" , sans-serif;
+  font-weight: 400;
+  line-height: 14px;
+  color: #5e5f61;
+}
+.article-card-time {
+  font-family: "Rubik" , sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #5e5f61;
+}
