--- a/css/main.css
+++ b/css/main.css
@@ -598,7 +598,10 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+.site-footer-social-network-item:not(:last-child) {
   margin-right: 25px;
+
 }
 .site-footer-social-link {
   text-decoration: none;
